migrations: Subscription.is_user_active denormalization - step one.
This adds the is_user_active with the appropriate code for setting the
value correctly in the future. In the following commit a migration to
backfill the value for existing Subscriptions will be added.

To ensure correct user_profile.is_active handling also in tests, we
replace all direct .is_active mutation with calls to appropriate
functions.

--- a/tools/semgrep.yml
+++ b/tools/semgrep.yml
@@ -139,3 +139,17 @@ rules:
     pattern: typing.Text
     severity: ERROR
     message: "Use str instead of typing.Text"
+
+  - id: change-user-is-active
+    languages: [python]
+    patterns:
+      - pattern-either:
+          - pattern: |
+              $X.is_active = ...
+          - pattern: |
+              setattr($X, 'is_active', ...)
+      - pattern-not-inside: |
+          def change_user_is_active(...):
+            ...
+    message: "Use change_user_is_active to mutate user_profile.is_active"
+    severity: ERROR
